<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/nameStyle"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/nameStyle"
        android:textAlignment="center"
        android:hint="@string/what_is_your_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"
       android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />

    <TextView
        style="@style/nameStyle"
        android:textAlignment="center"
        android:id="@+id/nickname_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bio_text"
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="@dimen/padding"

            android:paddingEnd="@dimen/padding"
            android:text="@string/bio"
            tools:text="@string/bio" />
    </ScrollView>
</LinearLayout>